--- a/angular/package.json
+++ b/angular/package.json
@@ -22,11 +22,13 @@
     "@abp/ng.theme.basic": "~8.1.4",
     "@abp/ng.theme.shared": "~8.1.4",
     "@angular/animations": "~17.1.0",
+    "@angular/cdk": "17.3.10",
     "@angular/common": "~17.1.0",
     "@angular/compiler": "~17.1.0",
     "@angular/core": "~17.1.0",
     "@angular/forms": "~17.1.0",
     "@angular/localize": "~17.1.0",
+    "@angular/material": "17.3.10",
     "@angular/platform-browser": "~17.1.0",
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
